--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   background: white;
   padding: 30px;
   border-radius: 12px;
-  max-width: 1200px;
+  max-width: 100dvh;
   margin: auto;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
   overflow-x: auto;
